# Nisaba

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.agent/: Signs_of_AI_writing.md
apps/desktop/: index.html  package.json
apps/desktop/src/: App.svelte  EditorSync.svelte  sync.ts  vaultStorage.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  indexer.rs  lib.rs  main.rs  watcher.rs
apps/sync-server/: Cargo.toml  sync.db
apps/sync-server/src/: indexer.rs  main.rs  persistence.rs
apps/web/: index.html  package.json
apps/web/src/: App.svelte  dataLayer.ts  sync.ts
docs/: architecture.md  design-principles.md  desktop-troubleshooting.md  roadmap.md
docs/archive/: concept-original.md  phase3-sync-implementation.md
