[package]
name = "nisaba-sync-server"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
yrs = "0.18"
yrs-axum = "0.8"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
urlencoding = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
tower-http = { version = "0.5", features = ["cors"] }
