[package]
name = "nisaba-desktop"
version = "0.0.1"

[lib]
name = "nisaba_desktop"
description = "Nisaba desktop client"
authors = ["Nisaba"]
license = "AGPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
